--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.7",
         "rappasoft/laravel-livewire-tables": "^3.7",
+        "spatie/laravel-permission": "^6.24",
         "stancl/tenancy": "^3.9"
     },
     "require-dev": {
